transmission-openvpn/base/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "transmission-openvpn"
spec:
  selector:
    matchLabels:
      app: "transmission-openvpn"
  template:
    metadata:
      labels:
        app: "transmission-openvpn"
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: "transmission-openvpn"
          image: "haugene/transmission-openvpn:5.4.1"
          securityContext:
            capabilities:
              add:
                - "NET_ADMIN"
            # cap add NET_ADMIN is insufficient; you must allow escalation
            allowPrivilegeEscalation: true
            privileged: true
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 9091
              name: "torrent-http"
              protocol: "TCP"
          volumeMounts:
            - mountPath: "/data"
              name: "media-pvc"
        - name: "transmission-exporter"
          image: "micaelserrano/transmission-exporter"
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 9190
              name: "torrent-export"
              protocol: "TCP"
      volumes:
        - name: "media-pvc"
          persistentVolumeClaim:
            claimName: "media-pvc"
