transmission-openvpn/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "transmission-openvpn"
spec:
  selector:
    app: "transmission-openvpn"
  ports:
    - port: 9091
      name: "torrent-http"
      protocol: "TCP"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "torrent-export"
spec:
  selector:
    app: "transmission-openvpn"
  ports:
    - port: 9190
      name: "torrent-export"
      protocol: "TCP"
