transmission-openvpn/base/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "transmission-openvpn"
  labels:
    name: "transmission-openvpn"
spec:
  rules:
    - host: "transmission.k3s.home"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "transmission-openvpn"
                port:
                  name: "torrent-http"
